# lucid-clone

./: .gitignore  BUGFIX-SPEC.md  INTERACTION-SPEC.md  README.md  SPEC.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
e2e/: canvas.spec.ts
playwright-report/: index.html
src/: App.tsx
src/components/: Canvas.test.tsx  Canvas.tsx  Dashboard.tsx  Editor.tsx  ExportMenu.tsx  K8sIcons.tsx  K8sSidebar.tsx  PropertiesPanel.tsx  Toolbar.tsx
src/services/: index.ts  localDiagramService.ts  types.ts
src/store/: index.test.ts  index.ts
src/types/: index.test.ts  index.ts
src/utils/: db.ts
test-results/: .last-run.json
test-results/canvas-Connector-Creation--037b7-ncel-connection-with-Escape-chromium/: error-context.md
test-results/canvas-K8s-Shapes-Sidebar-should-have-collapsible-categories-chromium/: error-context.md
test-results/canvas-Multiple-Shape-Oper-81efe-necting-multiple-K8s-shapes-chromium/: error-context.md
test-results/canvas-Shape-Selection-and-04e2d-te-shape-with-delete-button-chromium/: error-context.md
test-results/canvas-Zoom-Controls-should-zoom-with-multiple-clicks-chromium/: error-context.md
wasm/: Cargo.toml
wasm/src/: lib.rs
