[package]
name = "lucid-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Lucid Clone"]
description = "WASM core for Lucid Clone diagramming tool"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.90"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "js"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
